--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                   </div>
                             </div>
                         </div>
-                        <div class="card" style="margin-left: 3%; width: 18rem; height: 18rem;">
+                        <div class="card mx-6 my-6" style="margin-left: 3%; width: 18rem; height: 18rem;">
                             <div class="card-body">
                             <h5 class="card-title">Sherry Hsu</h5>
                             <h6 class="card-subtitle mb-2 text-muted">許舒毓</h6>
@@ -252,7 +252,7 @@
                             </div>
                         </div>                    
                         <div class="col">
-                            <div class="card" style="margin-left: 5%; margin-top: 0 !important; padding-top: 0 !important; margin-bottom: 50 !important; width: 30rem; height: 85rem;">
+                            <div class="card mx-6 my-6" style="margin-left: 5%; margin-top: 0 !important; padding-top: 0 !important; margin-bottom: 50 !important; width: 30rem; height: 85rem;">
                                 <div class="card-body">
                                     <h5 class="card-title">Expriences</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Developing Taipei-pass(台北通) Backstage</h6>
@@ -285,7 +285,7 @@
                             </div>                                                                               
                         </div>
                         <div class="col">
-                            <div class="card" style="margin-left: 5%; width: 18rem; height: 60rem;">
+                            <div class="card mx-6 my-6" style="margin-left: 5%; width: 18rem; height: 60rem;">
                                 <div class="card-body">
                                 <h5 class="card-title">Personal Info</h5>                                
                                 <p class="card-text">email: shuyu72@ccu.edu.tw</p>
