--- a/index.html
+++ b/index.html
@@ -368,11 +368,16 @@
             
             function getWidth() {
                 return Math.max(
-                    document.body.scrollWidth,
-                    document.documentElement.scrollWidth,
-                    document.body.offsetWidth,
-                    document.documentElement.offsetWidth,
-                    document.documentElement.clientWidth
+                    // document.body.scrollWidth,
+                    // document.documentElement.scrollWidth,
+                    // document.body.offsetWidth,
+                    // document.documentElement.offsetWidth,
+                    // document.documentElement.clientWidth
+                    document.body.scrollHeight,
+                    document.documentElement.scrollHeight,
+                    document.body.offsetHeight,
+                    document.documentElement.offsetHeight,
+                    document.documentElement.clientHeight
                 );
             }
 
