--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             var ml=randMl;//移動的長度
             var w=15;//矩形的寬
             var h=15;//矩形的高
-            var cw=getWidth();//畫布的寬
+            var cw=900;//getWidth();//畫布的寬
             var ch=getHeight();//document.body.clientHeight;//畫布的高
 
             function initMXMY(size){
