--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                   </div>
                             </div>
                         </div>
-                        <div class="card mx-6 my-6" style="margin-left: 3%; width: 18rem; height: 18rem;">
+                        <div class="card mx-6 my-6" style="margin-left: 3%; margin-bottom: 5%; width: 18rem; height: 18rem;">
                             <div class="card-body">
                             <h5 class="card-title">Sherry Hsu</h5>
                             <h6 class="card-subtitle mb-2 text-muted">許舒毓</h6>
