--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             </div>
                         </div>                    
                         <div class="col">
-                            <div class="card mx-6 my-6" style="margin-left: 5%; margin-top: 0 !important; padding-top: 0 !important; margin-bottom: 50 !important; width: 30rem; height: 85rem;">
+                            <div class="card mx-6 my-6" style="margin-left: 5%; margin-bottom: 50 !important; width: 30rem; height: 85rem;">
                                 <div class="card-body">
                                     <h5 class="card-title">Expriences</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Developing Taipei-pass(台北通) Backstage</h6>
