--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
                     <div id="carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="pics/1.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 15vw; width: 15vw;" alt="...">
+                            <img src="pics/1.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 10%; width: auto;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="pics/2.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 15vw; width: 15vw;" alt="...">
+                            <img src="pics/2.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 10%; width: auto;" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="pics/3.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 15vw; width: 15vw;" alt="...">
+                            <img src="pics/3.jpg" class="d-block" style="margin-left: 20%; margin-top: 0%; height: 10%; width: auto;" alt="...">
                         </div>
                         </div>               
                     </div>
