--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <div class="card mx-6 my-6" style="margin-left: 5%; width: 18rem; height: 60rem;">
                                 <div class="card-body">
                                 <h5 class="card-title">Personal Info</h5>                                
-                                <p class="card-text">email: shuyu72@ccu.edu.tw</p>
+                                <p class="card-text">email: shuyu72@alum.ccu.edu.tw</p>
                                 <hr/>
                                 <h6 class="card-subtitle mb-2 text-muted">Skill</h6>
                                 <p class="card-text">Familiar with the below Programming Languages:</p>
