--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Sherry Hsu</h5>
                             <h6 class="card-subtitle mb-2 text-muted">許舒毓</h6>
-                            <p class="card-text">In-service Master's degree is expected to received at Jan. 2023 From National Chung Cheng University.</p>                  
+                            <p class="card-text">In-service Master's degree is expected to receive at Jan. 2023 From National Chung Cheng University.</p>                  
                             <a href="https://github.com/shuyu72" class="card-link">Github</a>
                             <a href="https://www.linkedin.com/in/sherry-hsu-351822b3/" class="card-link">LinkedIn</a>
                             </div>
