--- a/cat_connect/cat_connect.html
+++ b/cat_connect/cat_connect.html
@@ -10,6 +10,6 @@
     </script> 
 </head>
 <body>	
-	<script type="module" src="cat_connect.js"></script>
+	<script type="module" src="../cat_connect.js"></script>
 </body>
 </html>
